--- a/example.html
+++ b/example.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-es">
     <head>
-        
+        <!-- Creado por Rodrhigo - AutoUploader - Source: https://github.com/Rodrhigo/RAIOLA-MANDA-Y-NO-EL-PANDA  -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta http-equiv="pragma" content="no-cache"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name ="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
-
-        <title>Raiola Manda Y No El Panda - Example</title>
-
-        <!-- Set the background colour of the document -->
+		<link rel="icon" type="image/png" href="panda.png" />
+        <title>Raiola Manda Y No El Panda</title>
         <style>
             body {
               background: #000000;
@@ -37,6 +35,8 @@
               margin: 0px;
               padding: 0px;
               border: 0px;
+			  position:relative;
+			  float:left;
             }
             /* START - Login Dialog Box */
             div.gm4html5_login
@@ -66,6 +66,34 @@
                width: 100%;
                height: 100%;
             }
+			#Raiola_Manda_Y_No_El_Panda_Puntaje{
+				position:relative;
+				margin-left:650px;
+				height:500px;
+				background:white;
+			}
+			#Tabla_Posiciones tr{
+				
+			}
+			#Tabla_Posiciones th{padding:10px 0px;}
+			#Tabla_Posiciones th,td{
+				border-bottom:1px solid #e3e3e3;
+			}
+			#Tabla_Posiciones{
+				position:relative;
+				float:left;
+				width:100%;
+				height:500px;
+				border-spacing:0px;
+				color: #666;
+			}
+			.Nickname{
+				padding:5px 0px;
+				padding-left: 20px;
+			}
+			a,a:visited,a:hover{color:inherit !important;text-decoration:none;}
+			a:hover{text-decoration:underline;}
+			.Score{text-align:center;}
         </style>
     </head>
 
@@ -76,7 +104,23 @@
                <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
-
+		<div id="Raiola_Manda_Y_No_El_Panda_Puntaje">
+			<table id="Tabla_Posiciones">
+				<thead><tr><th>Nickname</th><th>Puntaje</th></tr></thead>
+				<tbody id="Tabla_Posiciones_Body">
+					<tr><td class="Nickname"><a href="https://github.com/Rodrhigo">https://github.com/Rodrhigo</a></td><td class="Score">330</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">260</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">243</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">213</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">194</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">330</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">260</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">243</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">213</td></tr>
+					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">194</td></tr>
+				</tbody>
+			</table>
+		</div>
         <!-- Run the game code -->
         <script type="text/javascript" src="script/raiola-manda-y-no-el-panda.js"></script>
     </body>
