--- a/example.html
+++ b/example.html
@@ -75,7 +75,8 @@
 			#Tabla_Posiciones tr{
 				
 			}
-			#Tabla_Posiciones th{padding:10px 0px;}
+			#Tabla_Posiciones th{padding-bottom:5px;}
+		#Nickname{text-align:left;padding-left:20px;}
 			#Tabla_Posiciones th,td{
 				border-bottom:1px solid #e3e3e3;
 			}
@@ -106,7 +107,7 @@
         </div>
 		<div id="Raiola_Manda_Y_No_El_Panda_Puntaje">
 			<table id="Tabla_Posiciones">
-				<thead><tr><th>Nickname</th><th>Puntaje</th></tr></thead>
+				<thead><tr><th id="Nickname">Nickname</th><th id="Puntaje">Puntaje</th></tr></thead>
 				<tbody id="Tabla_Posiciones_Body">
 					<tr><td class="Nickname"><a href="https://github.com/Rodrhigo">https://github.com/Rodrhigo</a></td><td class="Score">330</td></tr>
 					<tr><td class="Nickname">https://github.com/Rodrhigo</td><td class="Score">260</td></tr>
