--- a/example.html
+++ b/example.html
@@ -79,6 +79,8 @@
 		#Nickname{text-align:left;padding-left:20px;}
 			#Tabla_Posiciones th,td{
 				border-bottom:1px solid #e3e3e3;
+				max-width:150px;
+				word-wrap:break-word;
 			}
 			#Tabla_Posiciones{
 				position:relative;
