Raiola Manda y No El Panda Libro
Libro

--- a/example.html
+++ b/example.html
@@ -124,6 +124,7 @@
 				</tbody>
 			</table>
 		</div>
+	    Libro Amazon Jaime https://www.amazon.es/dp/B071H3MWRP con guia completa de instalación.
         <!-- Run the game code -->
         <script type="text/javascript" src="script/raiola-manda-y-no-el-panda.js"></script>
     </body>
